# docx-stylekit

./: README.md  merged.yaml  observed.yaml  pyproject.toml  report.docx  requirements.txt  sampleObserved.yaml
doc/: prompt.md
examples/: enterprise_baseline.yaml  sample.docx
src/docs/: explain.md  json_template.json  prompt.txt  template_explain.md
src/docx_stylekit/: __init__.py  api.py  cli.py  constants.py
src/docx_stylekit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/docx_stylekit/convert/: markdown.py
src/docx_stylekit/data/: default_render_template.yaml
src/docx_stylekit/diff/: differ.py
src/docx_stylekit/emit/: observed_yaml.py  report.py
src/docx_stylekit/io/: docx_zip.py  rels.py
src/docx_stylekit/merge/: merger.py
src/docx_stylekit/model/: observed.py  schema.py
src/docx_stylekit/parsers/: document.py  headers_footers.py  numbering.py  styles.py  theme.py
src/docx_stylekit/render/: json_template.py
src/docx_stylekit/tools/: image_paragraphs.py  sanitizer.py
src/docx_stylekit/utils/: dicts.py  io.py  units.py  xml.py
src/docx_stylekit/writer/: docx_writer.py  section_utils.py  style_store.py
tests/: test_api.py  test_image_fix.py  test_markdown_min.py  test_observe_min.py  test_sanitize.py
